# ChessEngineV2

./: README.md
src/: CMakeLists.txt  Communication.cpp  Communication.h  Engine.cpp  Engine.h  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  GameState.cpp  GameState.h  TranspositionTable.cpp  TranspositionTable.h  constants.h  engineConstants.h  magicBitboards.cpp  magicBitboards.h  main.cpp  moveOrderer.cpp  moveOrderer.h
